# 06_lesson_tests

./: pyproject.toml
src/: work_2.py
tests/: test_main.py  test_work_2.py
